feat: consultar cliente
